--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -3,6 +3,10 @@
     -fx-background-color: white;
 }
 
+.bold {
+    -fx-font-weight: bold;
+}
+
 .grey-background {
     -fx-background-color: #f0f0f0;
 }
