--- a/resources/fxml/LibraryMenu.fxml
+++ b/resources/fxml/LibraryMenu.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="100.0" styleClass="root" stylesheets="@../css/default.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.LibraryMenu">
+<VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="150.0" styleClass="root" stylesheets="@../css/default.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.LibraryMenu">
    <children>
       <HBox alignment="CENTER">
          <children>
@@ -27,6 +27,9 @@
       <Button fx:id="createPlaylistButton" mnemonicParsing="false" styleClass="create-playlist" stylesheets="@../css/buttons.css">
          <graphic>
             <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic></Button>
+         </graphic>
+         <VBox.margin>
+            <Insets bottom="25.0" />
+         </VBox.margin></Button>
    </children>
 </VBox>
