Refactor playlist creation UI and remove unused menu (AI GENERATED SUMMARY)
Added confirm and cancel buttons to the playlist creation popup and updated logic to handle validation and closing via these buttons. Removed the 'Destytojui' menu and related DSA controls from TopMenu.fxml and TopMenu.java for code cleanup.

--- a/resources/fxml/PlaylistPopup.fxml
+++ b/resources/fxml/PlaylistPopup.fxml
@@ -27,6 +27,8 @@
             <Font name="Verdana" size="20.0" />
          </font>
       </Label>
+      <Button fx:id="confirmButton" defaultButton="true" layoutX="260.0" layoutY="129.0" mnemonicParsing="false" text="Confirm" />
+      <Button fx:id="cancelButton" cancelButton="true" layoutX="200.0" layoutY="129.0" mnemonicParsing="false" text="Cancel" />
    </children>
    <stylesheets>
       <URL value="@../css/rename.css" />
